--- a/part2.html
+++ b/part2.html
@@ -11,7 +11,7 @@
                     button = "JUMP>" 
                 }
                
-                document.getElementById("newTxt").innerHTML = "<input type 'text' id='left' name='left' value=" + right_text + "><input type='button' id='button' name='button' onclick='jump()' value = " + button + "><input type 'text' id='right' name='right' value="+left_text+">"
+                document.getElementById("new").innerHTML = "<input type 'text' id='left' name='left' value=" + right_text + "><input type='button' id='button' name='button' onclick='jump()' value = " + button + "><input type 'text' id='right' name='right' value="+left_text+">"
             }
         </script>
 	</head>
@@ -19,7 +19,7 @@
 		<h1 style="text-align: center">Assignment 7 Part 2</h1>
 		<br>
 		<form>
-            <div id="newTxt", name="newTxt">
+            <div id="new", name="new">
                 <input type='text' id='left' name='left' value="">
                 <input type="button" id="button" onclick="jump()" value = "JUMP>">
                 <input type='text' id='right' name='right' value="">
